--- a/config.json
+++ b/config.json
@@ -10,10 +10,10 @@
   "EMAIL": "",
   "PASWORD": "",
   "OTPKEY": "",
-  "BOTNAME": "𝓑𝓸𝓚",
+  "BOTNAME": "xᴀ́ᴍ ♫",
   "PREFIX": "!",
   "ADMINBOT": [
-    "100037741424837"
+    "100083411540341"
   ],
   "NDH": [],
   "DATABASE": {
